# Epidemic-modelling

./: .gitignore  README.md  lstm_model.ckpt  main.py  pyproject.toml
data/: .~lock.processed.csv#  .~lock.raw.csv#  .~lock.refined.csv#  augmented.csv  best_solution.csv  daily_processed.csv  daily_processed1.csv  plot.csv  processed.csv  raw.csv  recovery.csv  refined.csv
data/solutions/: baseline.csv  shorter_weeks.csv  time_varying.csv  time_varying_old.csv  time_varying_post_lstm.csv  time_varying_pre_lstm.csv
epidemic_modelling/: __init__.py  dataset.py  main.py  model.py  pso.py  sird.py  sird_base_model.py  sird_playground.ipynb  test.ipynb
epidemic_modelling/.ipynb_checkpoints/: sird_playground-checkpoint.ipynb
epidemic_modelling/lstm/: dataset.py  main.py  model.py
