[tool.poetry]
name = "epidemic-modelling"
version = "0.1.0"
description = ""
authors = ["Mattia2700 <mattia2700franzin+dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.0"
seaborn = "^0.13.2"
inspyred = "^1.0.2"
black = "^24.4.2"
ipykernel = "^6.29.4"
tqdm = "^4.66.4"
click = "^8.1.7"
jupyter = "^1.0.0"
jupyter-core = "^5.7.2"
pytorch-lightning = "^2.3.0"
scikit-learn = "^1.5.0"
torchdiffeq = "^0.2.4"
pygments = "^2.18.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ipykernel = "^6.29.4"
ruff = "^0.4.8"
ruff-lsp = "^0.0.53"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "epidemic_modelling.main:main"
sird = "epidemic_modelling.sird:main"
pso = "epidemic_modelling.pso:main"